<resources>
    <string name="app_name">EventCalendar</string>
    <string name="event_day">%1$d</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="sunday">Вс</string>
    <string name="saturday">Сб</string>
    <string name="friday">Пт</string>
    <string name="thursday">Чт</string>
    <string name="month_and_year">%1$s, %2$d</string>

    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
</resources>
