<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:background="@drawable/ripple"
            app:srcCompat="@drawable/round_arrow_left" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/month_and_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/previous"
            android:textSize="20sp"
            android:textColor="@color/greyish_brown"
            android:lines="1"
            tools:text="Сентябрь, 2017"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:background="@drawable/ripple"
            app:srcCompat="@drawable/round_arrow_right"/>

        <LinearLayout
            android:id="@+id/week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/previous"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="0.142"
                android:text="@string/monday"
                android:textSize="12sp"
                android:gravity="center" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="0.142"
                android:text="@string/tuesday"
                android:textSize="12sp"
                android:gravity="center" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="0.142"
                android:text="@string/wednesday"
                android:textSize="12sp"
                android:gravity="center" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="0.142"
                android:text="@string/thursday"
                android:textSize="12sp"
                android:gravity="center" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="0.142"
                android:text="@string/friday"
                android:textSize="12sp"
                android:gravity="center" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="0.142"
                android:text="@string/saturday"
                android:textSize="12sp"
                android:gravity="center" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="0.142"
                android:text="@string/sunday"
                android:textSize="12sp"
                android:gravity="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/week"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="4dp"
            android:background="@color/white_three" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/calendar_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />
</LinearLayout>
